--- a/src/client/css/app.css
+++ b/src/client/css/app.css
@@ -6,3 +6,32 @@ html, body {
   padding: 0;
   margin: 0;
 }
+
+.doors {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+.doors::before,
+.doors::after {
+  content: '';
+  width: 50%;
+  height: 100%;
+  display: inline-block;
+  transition: transform 200ms;
+}
+.doors::before {
+  background: linear-gradient(90deg, #c0c0c0 90%, #949494 94%, #c0c0c0 95%, #c0c0c0 99%, #adadad 100%);
+}
+.doors::after {
+  background: linear-gradient(270deg, #c0c0c0 90%, #949494 94%, #c0c0c0 95%, #c0c0c0 99%, #adadad 100%);
+}
+.doors.open::before {
+  transform: translateX(-100%);
+}
+.doors.open::after {
+  transform: translateX(100%);
+}
