--- a/src/client/css/app.css
+++ b/src/client/css/app.css
@@ -15,7 +15,7 @@ form > *:not(:last-child) {
   margin-bottom: 0.5em;
 }
 
-button {
+custom-dialog button {
   color: #fff;
   width: 100%;
   padding: 0.75em 1em;
