--- a/src/client/css/app.css
+++ b/src/client/css/app.css
@@ -177,15 +177,61 @@ custom-dialog button {
   transform: translateX(-50%);
 }
 
-#addCredsForm {
+.add-creds-form {
   --labeled-input__input-width: 270px;
   padding: 1em;
 }
-
+.add-creds-form__inputs {
+  max-height: calc(100vh - 260px);
+  overflow-x: hidden;
+  overflow-y: auto;
+}
+.add-creds-form__inputs > *:not(:last-child) {
+  margin-bottom: 0.25em;
+}
 #addCustomCred {
   width: 100%;
   color: #000;
-  margin-bottom: 2em;
   border: solid 1px;
   background: #eee;
+}
+
+form.input-creator-form > * {
+  margin: 0;
+}
+.input-creator {
+  padding: 0.5em;
+  border: dotted 1px;
+  background: rgba(187, 249, 200, 0.6);
+}
+.input-creator nav {
+  margin-top: 0.5em;
+  display: flex;
+}
+.input-creator button {
+  color: #333;
+  border: solid 1px;
+  background-color: transparent;
+  transition: background-color 200ms;
+}
+.input-creator button:hover {
+  background-color: rgba(255, 255, 255, 0.75);
+}
+.input-creator button:first-child {
+  border-right: none;
+  border-radius: 0.25em 0 0 0.25em;
+}
+.input-creator button:last-child {
+  border-radius: 0 0.25em 0.25em 0;
+}
+.input-creator input {
+  width: 100%;
+  padding: 0.5em;
+  border: solid 1px #8c8c8c;
+  border-radius: 0.25em;
+  background: #fff;
+}
+#addCustomCred.is--hidden,
+.input-creator.is--hidden {
+  display: none;
 }
