--- a/src/client/css/app.css
+++ b/src/client/css/app.css
@@ -235,11 +235,12 @@ custom-dialog button {
 
 .credentials-card {
   width: 450px;
-  padding: 0.5em 1em 1em;
+  padding: 0.5em 1em 3em;
   border: solid 1px;
   border-radius: 0.25em;
   background: #fff;
   box-shadow: 0 4px 12px 2px rgba(0,0,0,0.25);
+  position: relative;
 }
 .credentials-card:not(:first-child) {
   margin-top: 1em;
@@ -298,6 +299,27 @@ custom-dialog button {
   left: 0;
   animation: copiedMsg var(--copiedMsgDuration);
   animation-fill-mode: forwards;
+}
+.credentials-card__ui {
+  border-top: solid 1px;
+  display: flex;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
+.credentials-card__ui button {
+  width: 100%;
+  padding: 0.5em;
+  border: none;
+  background: transparent;
+  cursor: pointer;
+}
+.credentials-card__ui button:not(:first-of-type) {
+  border-left: solid 1px;
+}
+.credentials-card__ui button[value="delete"] {
+  width: 32%;
 }
 
 .add-creds-form {
