--- a/src/client/css/app.css
+++ b/src/client/css/app.css
@@ -247,6 +247,7 @@ custom-dialog button {
   box-shadow: 0 2px 3px 1px rgba(0, 0, 0, 0.25);
   position: relative;
   overflow: hidden;
+  flex-shrink: 0;
 }
 .credentials-card:not(:first-child) {
   margin-top: 1em;
