feat: Add Creds inputs are now monospace
To ensure a User doesn't enter an "O" when they actually needed a zero, the inputs will now use monospace.

--- a/src/client/css/app.css
+++ b/src/client/css/app.css
@@ -392,6 +392,9 @@ custom-dialog button {
 .creds-form__inputs > *:not(:last-child) {
   margin-bottom: 0.25em;
 }
+.creds-form__inputs input {
+  font-family: monospace;;
+}
 #addCustomCred {
   width: 100%;
   color: #000;
