--- a/src/client/css/app.css
+++ b/src/client/css/app.css
@@ -53,12 +53,11 @@ form button:disabled {
 
 .spinner {
   content: '';
-  width: 12em;
-  height: 12em;
+  width: 100%;
+  height: 100%;
   position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  top: 0;
+  left: 0;
 }
 .spinner::before {
   content: '';
@@ -233,10 +232,7 @@ custom-dialog button {
   background-color: rgba(var(--color__credsBodyBG), 0.8);
   display: block;
 }
-.load-progress-indicator .spinner {
-  top: 40%;
-}
-.load-progress-indicator__info {
+.load-progress-indicator__wrapper {
   width: 12em;
   height: 12em;
   font-family: monospace;
@@ -249,6 +245,31 @@ custom-dialog button {
   display: flex;
   align-items: center;
   justify-content: center;
+}
+.load-progress-indicator__progress-svg {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+.load-progress-indicator__progress-svg circle {
+  fill: none;
+  stroke-width: 3;
+  stroke-linecap: round;
+  transform: rotate(-90deg) scale(0.9);
+  transform-origin: center;
+}
+.load-progress-indicator__progress-svg circle.is--path {
+  stroke: #cacaca;
+}
+.load-progress-indicator__progress-svg circle.is--fill {
+  --maxRadius: 315;
+  --currRadius: 315;
+  
+  stroke: #00a6ff;
+  stroke-dasharray: var(--maxRadius);
+  stroke-dashoffset: var(--currRadius);
 }
 .credentials.is--loading .load-progress-indicator {
   opacity: 1;
